<resources>
    <string name="app_name">kalkulator Kotlin</string>
    <string name="titik">.</string>
    <string name="backspace"></string>
    <string name="more"></string>
    <string name="no0">0</string>
    <string name="no1">1</string>
    <string name="no2">2</string>
    <string name="no3">3</string>
    <string name="no4">4</string>
    <string name="no5">5</string>
    <string name="no6">6</string>
    <string name="no7">7</string>
    <string name="no8">8</string>
    <string name="no9">9</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
    <string name="bagi">/</string>
    <string name="kali">*</string>
    <string name="samadengan">=</string>
    <string name="clear">C</string>

</resources>
